--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
     "moment": "^2.29.1",
+    "ngx-logger": "^4.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
